--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>CV: Tô Thành Duy</title>
+<title>Tô Thành Duy - Mobile Apps Developer</title>
 	
 	<!-- Meta tag Keywords -->
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -43,7 +43,7 @@
 			<!-- logo -->
 			<h1>
 				<a class="navbar-brand" href="index.html">
-					<img src="images/logo_dt.png" style="width: 57px;"> Tô Thành Duy
+					<img src="images/logo_dt.png" style="width: 57px;"> Thanh Duy To
 				</a>
 			</h1>
 			<!-- //logo -->
@@ -125,24 +125,29 @@
 						<div class="progress-bar progress-bar-striped active" style="width: 80%">
 						</div>
 					</div>
-					<h6>Planning and Organizational<span> 85% </span></h6>
+					<h6>Creativity<span> 70% </span></h6>
+					<div class="progress">
+						<div class="progress-bar progress-bar-striped active" style="width: 70%">
+						</div>
+					</div>
+					<h6>Mobile(Android & IOS)<span>85% </span></h6>
 					<div class="progress">
 						<div class="progress-bar progress-bar-striped active" style="width: 85%">
 						</div>
 					</div>
-					<h6>Adaptability<span>90% </span></h6>
+					<h6>Flutter/React Native<span>65% </span></h6>
 					<div class="progress">
-						<div class="progress-bar progress-bar-striped active" style="width: 90%">
+						<div class="progress-bar progress-bar-striped active" style="width: 65%">
 						</div>
 					</div>
-					<h6>Research<span>80% </span></h6>
+					<h6>Spring Boot/Web Api<span>70% </span></h6>
 					<div class="progress">
-						<div class="progress-bar progress-bar-striped active" style="width: 80%">
+						<div class="progress-bar progress-bar-striped active" style="width: 70%">
 						</div>
 					</div>
-					<h6>Project Management<span>75% </span></h6>
+					<h6>Database(Oracle, Sql Server)<span>60% </span></h6>
 					<div class="progress prgs-w3agile-last">
-						<div class="progress-bar progress-bar-striped active" style="width: 75%">
+						<div class="progress-bar progress-bar-striped active" style="width: 60%">
 						</div>
 					</div>
 				</div>
@@ -162,16 +167,12 @@
 		<h4 class="left-grid-blog"><i class="fa fa-graduation-cap" aria-hidden="true"></i> Education</h4>
 		</div>
 			<div class="col-lg-4 col-md-6 agile w3-icon-grid1">
-				<h3><i class="fas mr-2 fa-cogs" aria-hidden="true"></i> UI/UX Design</h3>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisci ngelit. In euismod faucibus quam. placerat placerat dolor. Vestibulum</p>
+				<h3><i class="fas mr-2 fa-cogs" aria-hidden="true"></i>HCMC University of Technology, VN</h3>
+				<p>Master, IT   (2018 - 2021)</p>
 			</div>
 			<div class="col-lg-4 col-md-6 agile mt-md-0 mt-sm-5 mt-4 w3-icon-grid1">
-				<h3><i class="fa mr-2 fa-mobile" aria-hidden="true"></i>Mobile Apps</h3>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisci ngelit. In euismod faucibus quam. placerat placerat dolor. Vestibulum</p>
-			</div>
-			<div class="col-lg-4 col-md-6 agile mt-lg-0 mt-sm-5 mt-4 w3-icon-grid1">
-				<h3><i class="fa mr-2 fa-laptop" aria-hidden="true"></i>Web Developer</h3>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisci ngelit. In euismod faucibus quam. placerat placerat dolor. Vestibulum</p>
+				<h3><i class="fa mr-2 fa-mobile" aria-hidden="true"></i>HCMC University of Technology, VN</h3>
+				<p>Engineer, IT   (2013 - 2017)</p>
 			</div>
 		</div>
 		
@@ -180,28 +181,40 @@
 		<h4 class="left-grid-blog"><i class="fa fa-trophy" aria-hidden="true"></i> Awards</h4>
 		</div>
 			<div class="col-lg-4 col-md-6 agile w3-icon-grid1">
-				<h3><i class="fas mr-2 fa-cogs" aria-hidden="true"></i> UI/UX Design</h3>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisci ngelit. In euismod faucibus quam. placerat placerat dolor. Vestibulum</p>
+				<h3><i class="fas mr-2 fa-cogs" aria-hidden="true"></i> Architecting on AWS</h3>
+				<p>Certificate of completion of Architecting on AWS 2020</p>
 			</div>
 			<div class="col-lg-4 col-md-6 agile mt-md-0 mt-sm-5 mt-4 w3-icon-grid1">
-				<h3><i class="fa mr-2 fa-mobile" aria-hidden="true"></i>Mobile Apps</h3>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisci ngelit. In euismod faucibus quam. placerat placerat dolor. Vestibulum</p>
+				<h3><i class="fa mr-2 fa-mobile" aria-hidden="true"></i>Merit for Outstanding Completion</h3>
+				<p>Certificate of Merit for Outstanding Completion of Education Quality Accreditation in 2018</p>
 			</div>
 			<div class="col-lg-4 col-md-6 agile mt-lg-0 mt-sm-5 mt-4 w3-icon-grid1">
-				<h3><i class="fa mr-2 fa-laptop" aria-hidden="true"></i>Web Developer</h3>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisci ngelit. In euismod faucibus quam. placerat placerat dolor. Vestibulum</p>
+				<h3><i class="fa mr-2 fa-laptop" aria-hidden="true"></i>Global Software Talent</h3>
+				<p>Certificate Global Software Talent (.Net Developer) Rank B 2017 (FPT Software)</p>
 			</div>
 			<div class="col-lg-4 col-md-6 agile mt-sm-5 mt-4 w3-icon-grid1">
-				<h3><i class="fas mr-2 fa-camera" aria-hidden="true"></i> Photoshop</h3>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisci ngelit. In euismod faucibus quam. placerat placerat dolor. Vestibulum</p>
+				<h3><i class="fas mr-2 fa-camera" aria-hidden="true"></i> Typical students</h3>
+				<p>Typical students Term II 2016-2017</p>
 			</div>
 			<div class="col-lg-4 col-md-6 agile mt-sm-5 mt-4 w3-icon-grid1">
-				<h3><i class="fab mr-2 fa-accusoft" aria-hidden="true"></i>Software</h3>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisci ngelit. In euismod faucibus quam. placerat placerat dolor. Vestibulum</p>
+				<h3><i class="fab mr-2 fa-accusoft" aria-hidden="true"></i>Consolation Prize</h3>
+				<p>Consolation Prize for Scientific Research Student at Ministry level 2017</p>
 			</div>
 			<div class="col-lg-4 col-md-6 agile mt-sm-5 mt-4 w3-icon-grid1">
-				<h3><i class="fas mr-2 fa-chart-pie" aria-hidden="true"></i>Graphic Design</h3>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisci ngelit. In euismod faucibus quam. placerat placerat dolor. Vestibulum</p>
+				<h3><i class="fas mr-2 fa-chart-pie" aria-hidden="true"></i>Rewards Google Startup</h3>
+				<p>Incubation Package Rewards Google Startup support 3000$ in 2017</p>
+			</div>
+			<div class="col-lg-4 col-md-6 agile mt-sm-5 mt-4 w3-icon-grid1">
+				<h3><i class="fas mr-2 fa-camera" aria-hidden="true"></i> Consolation Prize</h3>
+				<p>Consolation Prize and Certificate of Merit for the HCMC Youth Informatics Contest 2017</p>
+			</div>
+			<div class="col-lg-4 col-md-6 agile mt-sm-5 mt-4 w3-icon-grid1">
+				<h3><i class="fab mr-2 fa-accusoft" aria-hidden="true"></i>Second prize</h3>
+				<p>Second prize of 2016 Creative and Mobile Application Contest</p>
+			</div>
+			<div class="col-lg-4 col-md-6 agile mt-sm-5 mt-4 w3-icon-grid1">
+				<h3><i class="fas mr-2 fa-chart-pie" aria-hidden="true"></i>Typical students</h3>
+				<p>Typical students Term II 2015-2016 </p>
 			</div>
 		</div>
 	</div>
@@ -214,38 +227,34 @@
 		<h3 class="heading">Experience</h3>
 		<div class="row exp-grids">
 			<div class="col-md-3 exp wthree">
-				<h4>UI/UX designer</h4>
-				<h5>2007 - 2010</h5>
+				<h4>Software Developer</h4>
+				<h5>February 2020 - Present</h5>
 			</div>
 			<div class="col-md-9 mt-md-0 mt-4 wthree">
-				<p>Nulla viverra pharetra sem, eget pulvinar neque pharetra ac int. lorem ipsum Vestibulum. placerat placerat dolor. Vestibulum at dui nunc. Nullam eu elit neque lectus. Aliquam erat volutpat. Nullam ac mattis mi. Donec tincidunt leoelit dictum viverra luctus.</p>
+				<p><b>HCMC Development Joint Stock Commercial Bank</b></p>
+				<p>- Mobile application development on IOS platform (Native, Swift). Support for additional development of internal applications on Website platforms and desktop applications (Winform, ASP.Net MVC, Windows Service, C#)</p>
+				</br><p>- Mobile backend development, module (bill payment) in ESB project (Spring Boot, Java)</p>
 			</div>
 		</div>
 		<div class="row exp-grid1 mt-5 wthree">
 			<div class="col-md-9 mb-md-0 mb-4">
-				<p>Nulla viverra pharetra sem, eget pulvinar neque pharetra ac int. lorem ipsum Vestibulum. placerat placerat dolor. Vestibulum at dui nunc. Nullam eu elit neque lectus. Aliquam erat volutpat. Nullam ac mattis mi. Donec tincidunt leoelit dictum viverra luctus.</p>
+				<p><b>Wedu Online Education Joint Stock Company</b></p>
+				<p>- Receive customer requests, analyze requirements, assign work to members and estimate time, design models for databases, business APIs, applications and mobile application development (Android, IOS)</p>
+				</br><p>- Building internal education professional systems for HCMC University of Technology(Winform, ASP.Net MVC, C#). Manage publishing Android and IOS apps to Store, setup server for systems</p>
 			</div>
 			<div class="col-md-3 exp1 wthree">
-				<h4>Web Developer</h4>
-				<h5>2010 - 2013</h5>
+				<h4>Team Leader</h4>
+				<h5>April 2017 - January 2020</h5>
 			</div>
 		</div>
 		<div class="row exp-grids mt-5 wthree">
 			<div class="col-md-3 exp">
-				<h4>Mobile Apps</h4>
-				<h5>2013 - 2016</h5>
+				<h4>Internship Java Developer</h4>
+				<h5>December 2016 - February 2017</h5>
 			</div>
 			<div class="col-md-9 mt-md-0 mt-4 wthree">
-				<p>Nulla viverra pharetra sem, eget pulvinar neque pharetra ac int. lorem ipsum Vestibulum. placerat placerat dolor. Vestibulum at dui nunc. Nullam eu elit neque lectus. Aliquam erat volutpat. Nullam ac mattis mi. Donec tincidunt leoelit dictum viverra luctus.</p>
-			</div>
-		</div>
-		<div class="row exp-grid1 mt-5 wthree">
-			<div class="col-md-9 mb-md-0 mb-4">
-				<p>Nulla viverra pharetra sem, eget pulvinar neque pharetra ac int. lorem ipsum Vestibulum. placerat placerat dolor. Vestibulum at dui nunc. Nullam eu elit neque lectus. Aliquam erat volutpat. Nullam ac mattis mi. Donec tincidunt leoelit dictum viverra luctus.</p>
-			</div>
-			<div class="col-md-3 exp1 wthree">
-				<h4>Software</h4>
-				<h5>2016 - 2018</h5>
+				<p><b>HCMC Development Joint Stock Commercial Bank</b></p>
+				<p>Practice and research on banking tasks and develop with java and oracle</p>
 			</div>
 		</div>
 	</div>
@@ -259,7 +268,7 @@
 		<div class="row gallery_grid-more project-grids w3ls">
 		   <div class="col-md-3 p-0 pr-2 col-sm-3 col-6 agileits_w3layouts_gallery_grid1 hover14 column">
 			  <div class="w3_agile_gallery_effect">
-				 <a href="images/g1.jpg" data-lightbox="example-set" data-title="Lorem Ipsum is simply dummy the when an unknown galley of type and scrambled it to make a type specimen.">
+				 <a href="images/g1.jpg" data-lightbox="example-set" data-title="TODO.">
 					<figure>
 					   <img src="images/g1.jpg" alt=" " class="img-responsive" />
 					</figure>
@@ -268,7 +277,7 @@
 		   </div>
 		   <div class="col-md-3 p-0 pr-2 col-sm-3 col-6 agileits_w3layouts_gallery_grid1 hover14 column">
 			  <div class="w3_agile_gallery_effect">
-				 <a href="images/g2.jpg" data-lightbox="example-set" data-title="Lorem Ipsum is simply dummy the when an unknown galley of type and scrambled it to make a type specimen.">
+				 <a href="images/g2.jpg" data-lightbox="example-set" data-title="TODO.">
 					<figure>
 					   <img src="images/g2.jpg" alt=" " class="img-responsive" />
 					</figure>
@@ -278,7 +287,7 @@
 		   </div>
 		   <div class="col-md-6 p-0 col-sm-6 col-12 pt-sm-0 pt-2 agileits_w3layouts_gallery_grid1 hover14 column">
 			  <div class="w3_agile_gallery_effect">
-				 <a href="images/g3.jpg" data-lightbox="example-set" data-title="Lorem Ipsum is simply dummy the when an unknown galley of type and scrambled it to make a type specimen.">
+				 <a href="images/g3.jpg" data-lightbox="example-set" data-title="TODO.">
 					<figure>
 					   <img src="images/g3.jpg" alt=" " class="img-responsive" />
 					</figure>
@@ -289,7 +298,7 @@
 		<div class="row gallery_grid-more">
 		   <div class="col-md-6 p-0 col-sm-6 col-12 pt-sm-0 pt-2 agileits_w3layouts_gallery_grid1 w3layouts_gallery_grid1 hover14 column">
 			  <div class="w3_agile_gallery_effect">
-				 <a href="images/g4.jpg" data-lightbox="example-set" data-title="Lorem Ipsum is simply dummy the when an unknown galley of type and scrambled it to make a type specimen.">
+				 <a href="images/g4.jpg" data-lightbox="example-set" data-title="TODO.">
 					<figure>
 					   <img src="images/g4.jpg" alt=" " class="img-responsive" />
 					</figure>
@@ -298,7 +307,7 @@
 		   </div>
 		   <div class="col-md-3 pt-2 pl-2 p-0 col-sm-3 col-6 agileits_w3layouts_gallery_grid1 hover14 column">
 			  <div class="w3_agile_gallery_effect">
-				 <a href="images/g5.jpg" data-lightbox="example-set" data-title="Lorem Ipsum is simply dummy the when an unknown galley of type and scrambled it to make a type specimen.">
+				 <a href="images/g5.jpg" data-lightbox="example-set" data-title="TODO.">
 					<figure>
 					   <img src="images/g5.jpg" alt=" " class="img-responsive" />
 					</figure>
@@ -307,7 +316,7 @@
 		   </div>
 		   <div class="col-md-3 pt-2 pl-2 p-0 col-sm-3 col-6 agileits_w3layouts_gallery_grid1 hover14 column">
 			  <div class="w3_agile_gallery_effect">
-				 <a href="images/g6.jpg" data-lightbox="example-set" data-title="Lorem Ipsum is simply dummy the when an unknown galley of type and scrambled it to make a type specimen.">
+				 <a href="images/g6.jpg" data-lightbox="example-set" data-title="TODO.">
 					<figure>
 					   <img src="images/g6.jpg" alt=" " class="img-responsive" />
 					</figure>
@@ -327,32 +336,29 @@
 		<h3 class="heading">Other</h3>
 		<div class="row blog-grids">
 			<div class="col-lg-7">
-				<h4 class="left-grid-blog">I write beautiful things</h4>
-				<p class="left-grid-blog">Nulla viverra pharetra sem, eget pulvinar neque pharetra ac int. lorem ipsum Vestibulum. placerat placerat dolor.
-				Vestibulum at dui nunc.</p>
+				<h4 class="left-grid-blog">TODO</h4>
+				<p class="left-grid-blog">TODO.</p>
 				<div class="row">
 					<div class="col-md-6 pr-md-0 w3ls">
 						<div class="blog-grid1">
 							<h5>25th June</h5>
-							<h4>Eget pulvinar neq </h4>
-							<p>Nulla viverra pharetra sem, eget pulvinar neque pharetra ac int.</p>
+							<h4>TODO </h4>
+							<p>TODO.</p>
 						</div>
 					</div>
 					<div class="col-md-6 mt-md-0 mt-3 w3ls">
 						<div class="blog-grid1">
 							<h5>25th June</h5>
-							<h4>Eget pulvinar neq </h4>
-							<p>Nulla viverra pharetra sem, eget pulvinar neque pharetra ac int.</p>
+							<h4>TODO </h4>
+							<p>TODO.</p>
 						</div>
 					</div>
 				</div>
 			</div>
 			<div class="col-lg-5 mt-lg-0 mt-5 blog-grid1 w3ls">
 				<h5>25th June</h5>
-				<h4>Eget pulvinar neque pharetra </h4>
-				<p>Nulla viverra pharetra sem, eget pulvinar neque pharetra ac int. lorem ipsum Vestibulum. placerat placerat dolor.
-				Vestibulum at dui nunc. eget pulvinar neque pharetra ac int. In euismod faucibus quam. placerat placerat dolor. Nullam
-				eu elit neque lectus. Polite sadipscing elitr, sed diam nonumy eirmod.</p>
+				<h4>TODO </h4>
+				<p>TODO.</p>
 			</div>
 		</div>
 	</div>
@@ -373,8 +379,8 @@
 					</div>
 					<div class="col-11">
 						<h5>Email</h5>
-						<p><a href="mailto:duyto2403@gmail.com"> duyto2403@gmail.com</a></p>
 						<p><a href="mailto:thanhduyt09@gmail.com"> thanhduyt09@gmail.com</a></p>
+						<p><a href="mailto:duyto2403@gmail.com"> duyto2403@gmail.com</a></p>
 					</div>
 					<div class="col-1 pr-0 icon mt-4">
 						<i class="fa fa-phone" aria-hidden="true"></i>
@@ -389,8 +395,8 @@
 					</div>
 					<div class="col-11 mt-4">
 						<h5>Address</h5>
-						<p>24H Main Block, 4th cross, California,</p>
-						<p> California - 94203</p>
+						<p>Highway 13, Ward 25, Binh Thanh District, HCMC,</p>
+						<p> Ho Chi Minh City - 700000</p>
 					</div>
 				</div>
 			</div>
@@ -400,6 +406,7 @@
 					<ul>
 						<li><a href="https://www.facebook.com/DuyStarrist" target="_blank"><i class="fab mr-2 fa-facebook-f"></i></a></li>
 						<li><a href="skype:duystarrist?chat"><i class="fab mr-2 fa-skype"></i></a></li>
+						<li><a href="https://www.linkedin.com/in/thanhduy/" target="_blank"><i class="fab mr-2 fa-linkedin"></i></a></li>
 						<li><a href="https://www.pinterest.com/duystarrist/" target="_blank"><i class="fab mr-2 fa-pinterest"></i></a></li>
 					</ul>
 				</div>
