--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>Tô Thành Duy - Mobile Apps Developer</title>
+<title>Tô Thành Duy - Developer</title>
 	
 	<!-- Meta tag Keywords -->
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -17,6 +17,8 @@
 		}
 	</script>
 	<!--// Meta tag Keywords -->
+
+	<link href="images/logo_dt.ico" rel="icon">
     
 	<!-- css files -->
 	<link rel="stylesheet" href="css/bootstrap.css"> <!-- Bootstrap-Core-CSS -->
@@ -67,7 +69,7 @@
 						<a class="nav-link scroll" href="#projects">Projects</a>
 					</li>
 					<li class="nav-item mr-lg-4">
-						<a class="nav-link scroll" href="#blog">Other</a>
+						<a class="nav-link scroll" href="#blog">What I do</a>
 					</li>
 					<li class="nav-item mr-lg-4">
 						<a class="nav-link scroll" href="#contact">Contact</a>
@@ -89,10 +91,10 @@
 		<div class="container">
 			<div class="row agile_banner_info">
 				<div class="col-md-7 agile_banner_margin">
-					<h5>Hi</h5>
-					<h2>My name is <span>Duy</span></h2>
-					<h4>Mobile Apps Developer</h4>
-					<p>I myself have good teamwork skills, always in the job, the sense of duty assigned. Plan yourself and your work so that it doesn't interfere with your overall goals. Thinking and reasoning to solve a problem, may not know if it is better or not but do not give up. Try to support and help and share experiences if your team members have difficulty fulfilling the common tasks assigned.</p>
+					<h5>Hello</h5>
+					<h2>I'm <span>Duy To</span></h2>
+					<h4>Developer</h4>
+					<p>I myself have good teamwork skills, always in the job, the sense of duty assigned. Plan yourself and your work so that it doesn't interfere with your overall goals. Thinking and reasoning to solve a problem, it's not just about getting the job done, it's about doing it well and thinking optimally, expanding to challenge yourself.</p>
 					<a class="scroll" href="#about"> Read More </a>
 				</div>
 				<div class="col-md-5 image_margin">
@@ -130,21 +132,22 @@
 						<div class="progress-bar progress-bar-striped active" style="width: 70%">
 						</div>
 					</div>
-					<h6>Mobile(Android & IOS)<span>85% </span></h6>
+					<h6>Android & IOS - Native/Flutter/React Native<span>85% </span></h6>
 					<div class="progress">
 						<div class="progress-bar progress-bar-striped active" style="width: 85%">
 						</div>
 					</div>
-					<h6>Flutter/React Native<span>65% </span></h6>
-					<div class="progress">
-						<div class="progress-bar progress-bar-striped active" style="width: 65%">
-						</div>
-					</div>
-					<h6>Spring Boot/Web Api<span>70% </span></h6>
+					<h6>Spring Framework<span>70% </span></h6>
 					<div class="progress">
 						<div class="progress-bar progress-bar-striped active" style="width: 70%">
 						</div>
 					</div>
+					<h6>Cloud(GC, AWS, Azure)<span>35% </span></h6>
+					<div class="progress">
+						<div class="progress-bar progress-bar-striped active" style="width: 35%">
+						</div>
+					</div>
+					
 					<h6>Database(Oracle, Sql Server)<span>60% </span></h6>
 					<div class="progress prgs-w3agile-last">
 						<div class="progress-bar progress-bar-striped active" style="width: 60%">
@@ -224,7 +227,7 @@
 <!-- experience -->
 <section class="experience py-5" id="experience">
 	<div class="container py-3">
-		<h3 class="heading">Experience</h3>
+		<h3 class="heading">Work Experience</h3>
 		<div class="row exp-grids">
 			<div class="col-md-3 exp wthree">
 				<h4>Software Developer</h4>
@@ -232,14 +235,24 @@
 			</div>
 			<div class="col-md-9 mt-md-0 mt-4 wthree">
 				<p><b>HCMC Development Joint Stock Commercial Bank</b></p>
-				<p>- Mobile application development on IOS platform (Native, Swift). Support for additional development of internal applications on Website platforms and desktop applications (Winform, ASP.Net MVC, Windows Service, C#)</p>
-				</br><p>- Mobile backend development, module (bill payment) in ESB project (Spring Boot, Java)</p>
+				<p>- Mobile application developer on IOS platform (Native, Swift). Support for additional developer of internal applications on Website platforms and desktop applications (Winform, ASP.Net MVC, Windows Service, C#)</p>
+				</br><p>- Mobile backend developer(Spring Boot, .Net Core), frontend Webview in Mobile and develop project API in ESB</p>
+			</div>
+		</div>
+		<div class="row exp-grids">
+			<div class="col-md-3 exp wthree">
+				<h4>Freelancer Team</h4>
+				<h5>December 2016 - Present</h5>
+			</div>
+			<div class="col-md-9 mt-md-0 mt-4 wthree">
+				<p><b>Freelancer Team</b></p>
+				<p>- Solution consulting, Support and maintenance, Building API gateway, System and software upgrade, Website development, Desktop and Mobile application development, Specific business system development and digitization documents and Any other requirements from the Customer.</p>
 			</div>
 		</div>
 		<div class="row exp-grid1 mt-5 wthree">
 			<div class="col-md-9 mb-md-0 mb-4">
 				<p><b>Wedu Online Education Joint Stock Company</b></p>
-				<p>- Receive customer requests, analyze requirements, assign work to members and estimate time, design models for databases, business APIs, applications and mobile application development (Android, IOS)</p>
+				<p>- Receive customer requests, analyze requirements, assign work to members and estimate time, design models for databases, business APIs, applications and mobile application developer (Android, IOS)</p>
 				</br><p>- Building internal education professional systems for HCMC University of Technology(Winform, ASP.Net MVC, C#). Manage publishing Android and IOS apps to Store, setup server for systems</p>
 			</div>
 			<div class="col-md-3 exp1 wthree">
@@ -333,32 +346,67 @@
 <!-- blog -->
 <section class="blog py-5" id="blog">
 	<div class="container py-3">
-		<h3 class="heading">Other</h3>
+		<h3 class="heading">How I can help your next project</h3>
 		<div class="row blog-grids">
 			<div class="col-lg-7">
-				<h4 class="left-grid-blog">TODO</h4>
-				<p class="left-grid-blog">TODO.</p>
 				<div class="row">
 					<div class="col-md-6 pr-md-0 w3ls">
 						<div class="blog-grid1">
-							<h5>25th June</h5>
-							<h4>TODO </h4>
-							<p>TODO.</p>
+							<h4>Solution consulting </h4>
 						</div>
 					</div>
 					<div class="col-md-6 mt-md-0 mt-3 w3ls">
 						<div class="blog-grid1">
-							<h5>25th June</h5>
-							<h4>TODO </h4>
-							<p>TODO.</p>
+							<h4>Building API gateway </h4>
 						</div>
 					</div>
 				</div>
 			</div>
 			<div class="col-lg-5 mt-lg-0 mt-5 blog-grid1 w3ls">
-				<h5>25th June</h5>
-				<h4>TODO </h4>
-				<p>TODO.</p>
+				<h4>Support and maintenance </h4>
+			</div>
+		</div>
+		<div class="row blog-grids">
+			<div class="col-lg-12">
+				<div class="row">
+					<div class="col-md-5 pr-md-0 w3ls">
+						<div class="blog-grid1">
+							<h4>System and software upgrade </h4>
+						</div>
+					</div>
+					<div class="col-md-7 mt-md-0 mt-3 w3ls">
+						<div class="blog-grid1">
+							<h4>Desktop and Mobile application development</h4>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="row blog-grids">
+			<div class="col-lg-12">
+				<div class="row">
+					<div class="col-md-5 pr-md-0 w3ls">
+						<div class="blog-grid1">
+							<h4>Website development </h4>
+						</div>
+					</div>
+					<div class="col-md-7 mt-md-0 mt-3 w3ls">
+						<div class="blog-grid1">
+							<h4>.net program development</h4>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="row blog-grids">
+			<div class="col-lg-12">
+				<div class="row">
+					<div class="col-md-12 mt-md-0 mt-3 w3ls">
+						<div class="blog-grid1">
+							<h4>Specific business system development and digitization documents and Any other requirements from the Customer.</h4>
+						</div>
+					</div>
+				</div>
 			</div>
 		</div>
 	</div>
